<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_doctor_view_circle"
    app:cardCornerRadius="12dp"
    android:elevation="8dp"
    android:background="@drawable/background_color_grey"
    android:padding="12dp"
    android:layout_marginEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">
        
        
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/layout_doctor_image"
            android:src="@drawable/dr_1"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/layout_doctor_name"
            android:text="@string/dr_marcus_horizon"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/inter_medium"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="15dp"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/layout_doctor_speciality"
            android:text="@string/cardiologist"
            android:textSize="13sp"
            android:singleLine="true"/>
        
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_alignParentStart="true">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/star"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_doctor_rating"
                    android:text="@string/_4_7"
                    android:textSize="12sp"
                    android:textColor="@color/primaryDark"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">


                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/star"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_doctor_distance"
                    android:text="800m away"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins_medium"/>

            </LinearLayout>


        </RelativeLayout>

        
    </LinearLayout>


</androidx.cardview.widget.CardView>